src/test/ui/issues/issue-66667-function-cmp-cycle.stderr
error[E0369]: can't compare `fn() {second}` with `{integer}`
  --> $DIR/issue-66667-function-cmp-cycle.rs:2:12
   |
LL |     second == 1
   |     ------ ^^ - {integer}
   |     |
   |     fn() {second}

error[E0308]: mismatched types
  --> $DIR/issue-66667-function-cmp-cycle.rs:2:15
   |
LL |     second == 1
   |               ^ expected fn item, found integer
   |
   = note: expected fn item `fn() {second}`
                 found type `{integer}`

error[E0369]: can't compare `fn() {first}` with `{integer}`
  --> $DIR/issue-66667-function-cmp-cycle.rs:7:11
   |
LL |     first == 1
   |     ----- ^^ - {integer}
   |     |
   |     fn() {first}

error[E0308]: mismatched types
  --> $DIR/issue-66667-function-cmp-cycle.rs:7:14
   |
LL |     first == 1
   |              ^ expected fn item, found integer
   |
   = note: expected fn item `fn() {first}`
                 found type `{integer}`

error[E0369]: can't compare `fn() {bar}` with `{integer}`
  --> $DIR/issue-66667-function-cmp-cycle.rs:12:9
   |
LL |     bar == 1
   |     --- ^^ - {integer}
   |     |
   |     fn() {bar}

error[E0308]: mismatched types
  --> $DIR/issue-66667-function-cmp-cycle.rs:12:12
   |
LL |     bar == 1
   |            ^ expected fn item, found integer
   |
   = note: expected fn item `fn() {bar}`
                 found type `{integer}`

error: aborting due to 6 previous errors

Some errors have detailed explanations: E0308, E0369.
For more information about an error, try `rustc --explain E0308`.
